# VentureScout

./: AGENTS.md  README.md  deals.db  pyproject.toml  run.sh
frontEnd/: package-lock.json  package.json
src/frontEnd/: package-lock.json  vite.config.js
src/frontEnd/src/: App.jsx
src/venture_scout/: __init__.py  __main__.py  ai_analyzer.py  app.py  database.py  scraper.py  security.py  test_pipeline.py
tests/: __init__.py
